fixing top nav menu spacing

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ nav {
 }
 
 .menu > li {
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
 
 .menu-button-container {
